[gd_scene load_steps=7 format=3 uid="uid://cnwb0roi37ay3"]

[ext_resource type="Script" uid="uid://bq64bklemkfl1" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://sprmb7111vo7" path="res://scenes/man_spawner.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://cqxxfterquolf" path="res://scenes/brush.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://dleh4ud55go4k" path="res://scenes/drop_off.tscn" id="4_jyhfs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]

[sub_resource type="BoxMesh" id="BoxMesh_jyhfs"]

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0wfyh")

[node name="Brush" parent="." instance=ExtResource("2_sugp2")]

[node name="ManContainer" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="ManSpawner" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(168, 133)
spawn_delay = 1.0

[node name="CongregationArea2D" type="Area2D" parent="." groups=["congregation_area"]]
unique_name_in_owner = true
position = Vector2(583, 321)
scale = Vector2(25, 25)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CongregationArea2D"]
shape = SubResource("RectangleShape2D_0wfyh")

[node name="RedDropOff" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="RedDropOff"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
position = Vector2(1111, 56.9999)
rotation = 0.706858
scale = Vector2(50, 50)
mesh = SubResource("BoxMesh_jyhfs")

[node name="DropOff" parent="RedDropOff" instance=ExtResource("4_jyhfs")]
position = Vector2(1097, 74)
color = 1
